# chunky

./: .gitignore  LICENSE  README.md  build-app.sh  requirements.txt
Chunky/: Package.swift
Chunky/Resources/: Credits.html  Info.plist  chunker.py
Chunky/Sources/App/: ChunkyApp.swift
Chunky/Sources/Models/: AppSettings.swift  AppState.swift  Chunk.swift  PersistedState.swift  ProcessingJob.swift  QdrantPoint.swift
Chunky/Sources/Services/: ChunkingService.swift  DocumentProcessor.swift  EmbeddingService.swift  KeychainService.swift  OllamaService.swift  QdrantService.swift
Chunky/Sources/Theme/: AppTheme.swift
Chunky/Sources/Views/: CollectionBrowserView.swift  ContentView.swift  PreferencesView.swift
Chunky/Tests/: .env.example  ChunkingServiceTests.swift  E2ETests.swift  EmbeddingServiceTests.swift  OllamaServiceTests.swift  Package.swift  QdrantServiceTests.swift
assets/: sample_chunks.json
qdrant-up/: Cargo.toml
qdrant-up/src/: main.rs
scripts/: chunker.py
