[package]
name = "qdrant-up"
version = "0.1.0"
edition = "2021"

[dependencies]
qdrant-client = "1.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
url = "2"
